--- a/src/app/pages/tasks-list/task-list.hbs
+++ b/src/app/pages/tasks-list/task-list.hbs
@@ -27,34 +27,19 @@
   </header>
   <section class="screen-body">
     <div class="main-container">
-      <section class="message-section hidden">
-        <img class="message-section__img" src="/tomato-add.svg" alt="tomato">
-        <p class="message-section__message">Add your first task</p>
-      </section>
-      <section class="message-section hidden">
-        <img class="message-section__img" src="/tomato-add.svg" alt="tomato">
-        <p class="message-section__message">You don’t have any tasks left.
-          <br> Add new tasks to stay productive.</p>
-      </section>
-      <section class="message-section message-section--compact hidden">
-        <p class="message-section__message">Task added,
-          <br> drag it to the top 5 in daily task list</p>
-        <span class="message-section__icon">&#xe901;</span>
-      </section>
+
       <section class="message-section message-section--compact hidden">
         <p class="message-section__message message-section__message--done">Excellent,
           <br> all daily tasks done! :)</p>
       </section>
 
-
       <section class="today-task">
       </section>
 
-      <button class="task-list-screen__global-list-toggler">Global list </button>
+      <div id="global-list-container">
 
-      <section class="global-list">
+      </div>
 
-      </section>
     </div>
   </section>
 </section>
