--- a/src/app/pages/timer/timer.less
+++ b/src/app/pages/timer/timer.less
@@ -45,6 +45,22 @@
   border: 5px solid @yellow-orange-col;
   border-radius: 50%;
   box-shadow: 0px 0px 90px rgba(0, 0, 0, 0.3);
+
+  &--1-cat {
+    border-color: @selective-yellow;
+  }
+  &--2-cat {
+    border-color: @malibu-col;
+  }
+  &--3-cat {
+    border-color: @amethyst;
+  }
+  &--4-cat {
+    border-color: @terra-cotta;
+  }
+  &--5-cat {
+    border-color: @dark-turquolse;
+  }
 }
 
 .timer__clock-text {
