--- a/src/app/pages/timer/timer.hbs
+++ b/src/app/pages/timer/timer.hbs
@@ -12,15 +12,16 @@
 
       </section>
     </section>
-    <div class="timer__clock in-process" id="timer-clock">
+    <div class="timer__clock-wrapper" id="timer-clock">
 
     </div>
+
 
     <section class="timer__buttons" id="timer-buttons-container">
 
     </section>
 
-    <section class="screen-arrows">
+    <section class="screen-arrows" id="timer-arrows-container">
       <a href="/task-list" class="screen-arrow screen-arrow--left router-link"></a>
       <a href="#" class="screen-arrow screen-arrow--right"></a>
     </section>
