add settings firebase integration

--- a/src/app/pages/settings/settings.hbs
+++ b/src/app/pages/settings/settings.hbs
@@ -59,7 +59,7 @@
           </section>
           <section class="pom-settings__buttons">
             <a href="/task-list" class="button button--blue pom-settings--button router-link">Go to Tasks</a>
-            <button class="button button--green pom-settings--button">Save</button>
+            <button class="button button--green pom-settings--button" data-action="save-settings">Save</button>
           </section>
         </section>
       </div>
