--- a/src/assets/less/main.less
+++ b/src/assets/less/main.less
@@ -15,6 +15,8 @@
 @import "../../app/components/notifications/notifications";
 @import "../../app/components/button/button";
 @import "../../app/components/cycle/cycle";
+@import "../../app/components/loader/loader";
+
 
 
 /* pages */
