--- a/src/app/components/loader/loader.less
+++ b/src/app/components/loader/loader.less
@@ -1,4 +1,4 @@
-.loader-wrapper{
+.loader-wrapper {
   position: fixed;
   left: 50%;
   top: 50%;
@@ -6,190 +6,69 @@
   display: inline-block;
 }
 
-#escapingBallG{
-	position:relative;
-	width:115px;
-	height:40px;
-	margin:auto;
+.loader-text {
+  margin-right: 23px;
+  font-size: 32px;
 }
 
-.escapingBallG{
-	background-color:rgb(141,165,184);
-	position:absolute;
-	top:0;
-	left:0;
-	width:40px;
-	height:40px;
-	border-radius:20px;
-		-o-border-radius:20px;
-		-ms-border-radius:20px;
-		-webkit-border-radius:20px;
-		-moz-border-radius:20px;
-	animation-name:bounce_escapingBallG;
-		-o-animation-name:bounce_escapingBallG;
-		-ms-animation-name:bounce_escapingBallG;
-		-webkit-animation-name:bounce_escapingBallG;
-		-moz-animation-name:bounce_escapingBallG;
-	animation-duration:1.105s;
-		-o-animation-duration:1.105s;
-		-ms-animation-duration:1.105s;
-		-webkit-animation-duration:1.105s;
-		-moz-animation-duration:1.105s;
-	animation-iteration-count:infinite;
-		-o-animation-iteration-count:infinite;
-		-ms-animation-iteration-count:infinite;
-		-webkit-animation-iteration-count:infinite;
-		-moz-animation-iteration-count:infinite;
-	animation-timing-function:linear;
-		-o-animation-timing-function:linear;
-		-ms-animation-timing-function:linear;
-		-webkit-animation-timing-function:linear;
-		-moz-animation-timing-function:linear;
-	animation-delay:0s;
-		-o-animation-delay:0s;
-		-ms-animation-delay:0s;
-		-webkit-animation-delay:0s;
-		-moz-animation-delay:0s;
-	transform:scale(0.5, 1);
-		-o-transform:scale(0.5, 1);
-		-ms-transform:scale(0.5, 1);
-		-webkit-transform:scale(0.5, 1);
-		-moz-transform:scale(0.5, 1);
+.spinner {
+  width: 27px;
+  height: 27px;
+  position: relative;
+  display: inline-block;
 }
 
+.cube1, .cube2 {
+  background-color: @nepal-col;
+  width: 8px;
+  height: 8px;
+  position: absolute;
+  top: 0;
+  left: 0;
 
-
-@keyframes bounce_escapingBallG{
-	0%{
-		left:0px;
-		transform:scale(0.5, 1);
-	}
-
-	25%{
-		left:38px;
-		transform:scale(1, 0.5);
-	}
-
-	50%{
-		left:95px;
-		transform:scale(0.5, 1);
-	}
-
-	75%{
-		left:38px;
-		transform:scale(1, 0.5);
-	}
-
-	100%{
-		left:0px;
-		transform:scale(0.5, 1);
-	}
+  -webkit-animation: sk-cubemove 1.8s infinite ease-in-out;
+  animation: sk-cubemove 1.8s infinite ease-in-out;
 }
 
-@-o-keyframes bounce_escapingBallG{
-	0%{
-		left:0px;
-		-o-transform:scale(0.5, 1);
-	}
-
-	25%{
-		left:38px;
-		-o-transform:scale(1, 0.5);
-	}
-
-	50%{
-		left:95px;
-		-o-transform:scale(0.5, 1);
-	}
-
-	75%{
-		left:38px;
-		-o-transform:scale(1, 0.5);
-	}
-
-	100%{
-		left:0px;
-		-o-transform:scale(0.5, 1);
-	}
+.cube2 {
+  -webkit-animation-delay: -0.9s;
+  animation-delay: -0.9s;
 }
 
-@-ms-keyframes bounce_escapingBallG{
-	0%{
-		left:0px;
-		-ms-transform:scale(0.5, 1);
-	}
-
-	25%{
-		left:38px;
-		-ms-transform:scale(1, 0.5);
-	}
-
-	50%{
-		left:95px;
-		-ms-transform:scale(0.5, 1);
-	}
-
-	75%{
-		left:38px;
-		-ms-transform:scale(1, 0.5);
-	}
-
-	100%{
-		left:0px;
-		-ms-transform:scale(0.5, 1);
-	}
+@-webkit-keyframes sk-cubemove {
+  25% {
+    -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5)
+  }
+  50% {
+    -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg)
+  }
+  75% {
+    -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5)
+  }
+  100% {
+    -webkit-transform: rotate(-360deg)
+  }
 }
 
-@-webkit-keyframes bounce_escapingBallG{
-	0%{
-		left:0px;
-		-webkit-transform:scale(0.5, 1);
-	}
-
-	25%{
-		left:38px;
-		-webkit-transform:scale(1, 0.5);
-	}
-
-	50%{
-		left:95px;
-		-webkit-transform:scale(0.5, 1);
-	}
-
-	75%{
-		left:38px;
-		-webkit-transform:scale(1, 0.5);
-	}
-
-	100%{
-		left:0px;
-		-webkit-transform:scale(0.5, 1);
-	}
-}
-
-@-moz-keyframes bounce_escapingBallG{
-	0%{
-		left:0px;
-		-moz-transform:scale(0.5, 1);
-	}
-
-	25%{
-		left:38px;
-		-moz-transform:scale(1, 0.5);
-	}
-
-	50%{
-		left:95px;
-		-moz-transform:scale(0.5, 1);
-	}
-
-	75%{
-		left:38px;
-		-moz-transform:scale(1, 0.5);
-	}
-
-	100%{
-		left:0px;
-		-moz-transform:scale(0.5, 1);
-	}
+@keyframes sk-cubemove {
+  25% {
+    transform: translateX(22px) rotate(-90deg) scale(0.5);
+    -webkit-transform: translateX(22px) rotate(-90deg) scale(0.5);
+  }
+  50% {
+    transform: translateX(22px) translateY(22px) rotate(-179deg);
+    -webkit-transform: translateX(22px) translateY(22px) rotate(-179deg);
+  }
+  50.1% {
+    transform: translateX(22px) translateY(22px) rotate(-180deg);
+    -webkit-transform: translateX(22px) translateY(22px) rotate(-180deg);
+  }
+  75% {
+    transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5);
+    -webkit-transform: translateX(0px) translateY(22px) rotate(-270deg) scale(0.5);
+  }
+  100% {
+    transform: rotate(-360deg);
+    -webkit-transform: rotate(-360deg);
+  }
 }
