--- a/src/app/components/task-list/task-list-global.hbs
+++ b/src/app/components/task-list/task-list-global.hbs
@@ -1,6 +1,6 @@
 {{#if this.undoneTasks}}
-<button class="task-list-screen__global-list-toggler">Global list</button>
-<section class="global-list">
+<button class="task-list-screen__global-list-toggler" id="global-list-toggler">Global list</button>
+<section class="global-list" id="global-list">
   <div class="global-list__tabs-wrapper">
     <ul class="tabs  tabs--right  list" id="tasks-filter">
       <li class="tabs__item">
