reportModel's getPomodorasAmount method implemented

--- a/src/app/components/reports/reports.hbs
+++ b/src/app/components/reports/reports.hbs
@@ -9,7 +9,19 @@
     <button class="tabs__btn">Month</button>
   </li>
 </ul>
-<div id="charts-container">
+<div id="day-container">
+  <section class="reports-screen__report">
+    <img src="/chart.png" alt="" class="reports-screen__img">
+  </section>
+</div>
+
+<div id="week-container">
+  <section class="reports-screen__report">
+    <img src="/chart.png" alt="" class="reports-screen__img">
+  </section>
+</div>
+
+<div id="month-container">
   <section class="reports-screen__report">
     <img src="/chart.png" alt="" class="reports-screen__img">
   </section>
