task list model bug fixed

--- a/src/app/components/reports/reports.hbs
+++ b/src/app/components/reports/reports.hbs
@@ -9,19 +9,19 @@
     <button class="tabs__btn">Month</button>
   </li>
 </ul>
-<div id="day-container">
+<div id="day-container" style="margin-bottom: 50px">
   <section class="reports-screen__report">
     <img src="/chart.png" alt="" class="reports-screen__img">
   </section>
 </div>
 
-<div id="week-container">
+<div id="week-container" style="margin-bottom: 50px">
   <section class="reports-screen__report">
     <img src="/chart.png" alt="" class="reports-screen__img">
   </section>
 </div>
 
-<div id="month-container">
+<div id="month-container" style="margin-bottom: 50px">
   <section class="reports-screen__report">
     <img src="/chart.png" alt="" class="reports-screen__img">
   </section>
