--- a/src/app/components/task-list/task-list-global.hbs
+++ b/src/app/components/task-list/task-list-global.hbs
@@ -1,3 +1,4 @@
+{{log this}}
 {{#if this.undoneTasks}}
 <button class="task-list-screen__global-list-toggler" id="global-list-toggler">Global list</button>
 <section class="global-list" id="global-list">
